--- a/package.json
+++ b/package.json
@@ -1,6 +1,15 @@
 {
+  "type": "module",
   "dependencies": {
     "@superfluid-finance/js-sdk": "^0.6.1",
-    "express": "^4.18.1"
+    "chai": "^4.3.6",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "fetch": "^1.1.0",
+    "mocha": "^10.0.0",
+    "mongo": "^0.1.0",
+    "mongodb": "^4.7.0",
+    "node-fetch": "^2.6.7"
   }
 }
