--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-  "type": "module",
   "dependencies": {
+    "@decentral.ee/web3-helpers": "^0.5.3",
+    "@superfluid-finance/ethereum-contracts": "^1.3.0",
     "@superfluid-finance/js-sdk": "^0.6.1",
+    "@truffle/hdwallet-provider": "^2.0.9",
     "chai": "^4.3.6",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.1",
