--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
+  "type": "module",
   "dependencies": {
     "@decentral.ee/web3-helpers": "^0.5.3",
     "@superfluid-finance/ethereum-contracts": "^1.3.0",
     "@superfluid-finance/js-sdk": "^0.6.1",
     "@truffle/hdwallet-provider": "^2.0.9",
     "chai": "^4.3.6",
+    "child-process-promise": "^2.2.1",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "fetch": "^1.1.0",
+    "json": "^11.0.0",
     "mocha": "^10.0.0",
     "mongo": "^0.1.0",
     "mongodb": "^4.7.0",
