--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@truffle/hdwallet-provider": "^2.0.9",
     "chai": "^4.3.6",
     "child-process-promise": "^2.2.1",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
