--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
     "@decentral.ee/web3-helpers": "^0.5.3",
     "@superfluid-finance/ethereum-contracts": "^1.3.0",
     "@superfluid-finance/js-sdk": "^0.6.1",
+    "@superfluid-finance/sdk-core": "^0.4.2",
     "@truffle/hdwallet-provider": "^2.0.9",
     "chai": "^4.3.6",
     "child-process-promise": "^2.2.1",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.1",
+    "ethers": "^4.0.49",
     "express": "^4.18.1",
     "fetch": "^1.1.0",
     "json": "^11.0.0",
